[gd_scene load_steps=4 format=3 uid="uid://dfasbld5bnq6n"]

[ext_resource type="Script" uid="uid://bca5jsm16f01h" path="res://Scripts/BubbleShield.gd" id="1_g2oh2"]
[ext_resource type="Texture2D" uid="uid://c5jsd5w2jrefe" path="res://Assets/Weapons/BubbleShield.png" id="2_g2oh2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_m0uq7"]
radius = 19.0263

[node name="BubbleShield" type="Node2D" groups=["Gun"]]
script = ExtResource("1_g2oh2")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_m0uq7")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.025, 0.025)
texture = ExtResource("2_g2oh2")

[node name="shield" type="Timer" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="timeout" from="shield" to="." method="_on_shield_timeout"]
